rustdocs/errors/rust-bitcoin-fuzz-fuzz_targets-units-arbitrary_weight.rs.txt
error[E0432]: unresolved import `arbitrary`
 --> ../rust-bitcoin/fuzz/fuzz_targets/units/arbitrary_weight.rs:1:5
  |
1 | use arbitrary::{Arbitrary, Unstructured};
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `arbitrary`
  |
help: you might be missing a crate named `arbitrary`, add it to your project and import it in your code
  |
1 + extern crate arbitrary;
  |

error[E0432]: unresolved import `bitcoin`
 --> ../rust-bitcoin/fuzz/fuzz_targets/units/arbitrary_weight.rs:2:5
  |
2 | use bitcoin::Weight;
  |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
  |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
  |
1 + extern crate bitcoin;
  |

error[E0432]: unresolved import `honggfuzz`
 --> ../rust-bitcoin/fuzz/fuzz_targets/units/arbitrary_weight.rs:3:5
  |
3 | use honggfuzz::fuzz;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `honggfuzz`
  |
help: you might be missing a crate named `honggfuzz`, add it to your project and import it in your code
  |
1 + extern crate honggfuzz;
  |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
